better tuple ui

--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -984,27 +984,6 @@
           </layout>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_7">
-           <item>
-            <widget class="QLabel" name="lblSelectedTuple">
-             <property name="text">
-              <string>Selected</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="sbSelectedTuple"/>
-           </item>
-           <item>
-            <widget class="QPushButton" name="pbDeleteTuple">
-             <property name="text">
-              <string>Delete</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_8">
            <item>
             <widget class="QPushButton" name="pbApplyTuple">
@@ -1012,7 +991,7 @@
               <bool>false</bool>
              </property>
              <property name="text">
-              <string>Apply to Selected</string>
+              <string>Apply</string>
              </property>
             </widget>
            </item>
@@ -1029,48 +1008,21 @@
           </layout>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_9">
-           <item>
-            <widget class="QLabel" name="lblInsertTuple">
-             <property name="text">
-              <string>Insert</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="pbTupleInsertBefore">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="toolTip">
-              <string>must set all values marked as &lt;mixed&gt;</string>
-             </property>
-             <property name="text">
-              <string>Before</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="pbTupleInsertAfter">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="toolTip">
-              <string>must set all values marked as &lt;mixed&gt;</string>
-             </property>
-             <property name="text">
-              <string>After</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
           <layout class="QGridLayout" name="gridLayout">
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="leRVal"/>
+           </item>
            <item row="0" column="0">
             <widget class="QLabel" name="lblLVal">
              <property name="text">
               <string>L Value</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLineEdit" name="leLVal">
+             <property name="text">
+              <string>0</string>
              </property>
             </widget>
            </item>
@@ -1081,11 +1033,12 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QLineEdit" name="leLVal"/>
-           </item>
-           <item row="1" column="1">
-            <widget class="QLineEdit" name="leRVal"/>
+           <item row="1" column="2">
+            <widget class="QPushButton" name="pbDeleteTuple">
+             <property name="text">
+              <string>Delete</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
