adding stunt editing

--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -214,13 +214,20 @@
                </item>
                <item row="8" column="2">
                 <widget class="QLabel" name="lblRSHoulderGrip">
+                 <property name="toolTip">
+                  <string>0 = full grip, 12 = ice</string>
+                 </property>
                  <property name="text">
                   <string>Right shoulder grip?</string>
                  </property>
                 </widget>
                </item>
                <item row="9" column="0">
-                <widget class="QLineEdit" name="leTrackGrip"/>
+                <widget class="QLineEdit" name="leTrackGrip">
+                 <property name="toolTip">
+                  <string>0 = full grip, 12 = ice</string>
+                 </property>
+                </widget>
                </item>
                <item row="5" column="1">
                 <widget class="QLineEdit" name="lePitch"/>
@@ -247,16 +254,27 @@
                </item>
                <item row="6" column="2">
                 <widget class="QLabel" name="lblAILine3">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
                  <property name="text">
                   <string>AI line 3</string>
                  </property>
                 </widget>
                </item>
                <item row="7" column="1">
-                <widget class="QLineEdit" name="leAILine2"/>
+                <widget class="QLineEdit" name="leAILine2">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
+                </widget>
                </item>
                <item row="9" column="1">
-                <widget class="QLineEdit" name="leLeftShoulderGrip"/>
+                <widget class="QLineEdit" name="leLeftShoulderGrip">
+                 <property name="toolTip">
+                  <string>0 = full grip, 12 = ice</string>
+                 </property>
+                </widget>
                </item>
                <item row="1" column="2">
                 <widget class="QLineEdit" name="leRLaneWidth"/>
@@ -269,6 +287,9 @@
                </item>
                <item row="6" column="0">
                 <widget class="QLabel" name="lblAILine1">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
                  <property name="text">
                   <string>AI line 1</string>
                  </property>
@@ -295,13 +316,24 @@
                 <widget class="QLineEdit" name="leUnk7"/>
                </item>
                <item row="7" column="2">
-                <widget class="QLineEdit" name="leAILine3"/>
+                <widget class="QLineEdit" name="leAILine3">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
+                </widget>
                </item>
                <item row="7" column="0">
-                <widget class="QLineEdit" name="leAILine1"/>
+                <widget class="QLineEdit" name="leAILine1">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
+                </widget>
                </item>
                <item row="6" column="3">
                 <widget class="QLabel" name="lblAILine4">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
                  <property name="text">
                   <string>AI line 4</string>
                  </property>
@@ -318,7 +350,14 @@
                 </widget>
                </item>
                <item row="1" column="0">
-                <widget class="QLineEdit" name="leLShoulderWidth"/>
+                <widget class="QLineEdit" name="leLShoulderWidth">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                </widget>
                </item>
                <item row="2" column="0">
                 <widget class="QLabel" name="label_14">
@@ -328,10 +367,18 @@
                 </widget>
                </item>
                <item row="7" column="3">
-                <widget class="QLineEdit" name="leAILine4"/>
+                <widget class="QLineEdit" name="leAILine4">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
+                </widget>
                </item>
                <item row="9" column="2">
-                <widget class="QLineEdit" name="leRShoulderGrip"/>
+                <widget class="QLineEdit" name="leRShoulderGrip">
+                 <property name="toolTip">
+                  <string>0 = full grip, 12 = ice</string>
+                 </property>
+                </widget>
                </item>
                <item row="0" column="3">
                 <widget class="QLabel" name="lblRShW">
@@ -352,6 +399,9 @@
                </item>
                <item row="6" column="1">
                 <widget class="QLabel" name="lblAILine2">
+                 <property name="toolTip">
+                  <string>&gt;0 = left, 0 = center, &lt;0 = right</string>
+                 </property>
                  <property name="text">
                   <string>AI line 2</string>
                  </property>
@@ -383,6 +433,9 @@
                </item>
                <item row="8" column="0">
                 <widget class="QLabel" name="lblTrackGrip">
+                 <property name="toolTip">
+                  <string>0 = full grip, 12 = ice</string>
+                 </property>
                  <property name="text">
                   <string>Track grip</string>
                  </property>
@@ -404,6 +457,9 @@
                </item>
                <item row="8" column="1">
                 <widget class="QLabel" name="label_25">
+                 <property name="toolTip">
+                  <string>0 = full grip, 12 = ice</string>
+                 </property>
                  <property name="text">
                   <string>Left shoulder grip?</string>
                  </property>
@@ -451,6 +507,9 @@
                </item>
                <item row="0" column="0">
                 <widget class="QLabel" name="lblLeftSurfaceType">
+                 <property name="toolTip">
+                  <string>524703 590082 590082 appears to define a moving ramp or at least a surface the car can fly off of vertically</string>
+                 </property>
                  <property name="text">
                   <string>Left Surface Type</string>
                  </property>
@@ -461,6 +520,9 @@
                </item>
                <item row="1" column="0">
                 <widget class="QLabel" name="lblCenterSurfaceType">
+                 <property name="toolTip">
+                  <string>524703 590082 590082 appears to define a moving ramp or at least a surface the car can fly off of vertically</string>
+                 </property>
                  <property name="text">
                   <string>Center Surface Type</string>
                  </property>
@@ -468,6 +530,9 @@
                </item>
                <item row="2" column="0">
                 <widget class="QLabel" name="lblRightSurfaceType">
+                 <property name="toolTip">
+                  <string>524703 590082 590082 appears to define a moving ramp or at least a surface the car can fly off of vertically</string>
+                 </property>
                  <property name="text">
                   <string>Right Surface Type</string>
                  </property>
@@ -559,13 +624,25 @@
                 </widget>
                </item>
                <item row="0" column="1" colspan="2">
-                <widget class="QLineEdit" name="leLeftSurfaceType"/>
+                <widget class="QLineEdit" name="leLeftSurfaceType">
+                 <property name="toolTip">
+                  <string>524703 590082 590082 appears to define a moving ramp or at least a surface the car can fly off of vertically</string>
+                 </property>
+                </widget>
                </item>
                <item row="1" column="1" colspan="2">
-                <widget class="QLineEdit" name="leCenterSurfaceType"/>
+                <widget class="QLineEdit" name="leCenterSurfaceType">
+                 <property name="toolTip">
+                  <string>524703 590082 590082 appears to define a moving ramp or at least a surface the car can fly off of vertically</string>
+                 </property>
+                </widget>
                </item>
                <item row="2" column="1" colspan="2">
-                <widget class="QLineEdit" name="leRightSurfaceType"/>
+                <widget class="QLineEdit" name="leRightSurfaceType">
+                 <property name="toolTip">
+                  <string>524703 590082 590082 appears to define a moving ramp or at least a surface the car can fly off of vertically</string>
+                 </property>
+                </widget>
                </item>
                <item row="10" column="0">
                 <widget class="QLabel" name="label_36">
@@ -1022,7 +1099,7 @@
            <item row="1" column="0">
             <widget class="QLineEdit" name="leLVal">
              <property name="text">
-              <string>0</string>
+              <string/>
              </property>
             </widget>
            </item>
@@ -1061,13 +1138,217 @@
         <attribute name="title">
          <string>Stunts</string>
         </attribute>
-        <layout class="QHBoxLayout" name="horizontalLayout">
+        <layout class="QVBoxLayout" name="verticalLayout_10">
          <item>
-          <widget class="QLabel" name="label_5">
-           <property name="text">
-            <string>Not implemented yet</string>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <widget class="QLabel" name="lblStuntsCount">
+             <property name="text">
+              <string>Stunts Count</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="leStuntsCount">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_9">
+           <item>
+            <widget class="QPushButton" name="pbApplyStunt">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Apply</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pbRevertStunt">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Revert</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_10">
+           <item>
+            <widget class="QLabel" name="lblStuntIndex">
+             <property name="text">
+              <string>Geometry Index</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="leStuntIndex">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pbDeleteStunt">
+             <property name="text">
+              <string>Delete</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QGridLayout" name="gridLayout_6">
+           <item row="0" column="1">
+            <widget class="QLabel" name="lblStuntAngle">
+             <property name="toolTip">
+              <string>Lower is flatter, higher becomes trapezoid with longer top</string>
+             </property>
+             <property name="text">
+              <string>Angle</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QLabel" name="lblStuntUnk">
+             <property name="text">
+              <string>Unknown</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="leStuntAngle">
+             <property name="toolTip">
+              <string>Lower is flatter, higher becomes trapezoid with longer top</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLineEdit" name="leStuntUnk"/>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="lblStuntScaleFact">
+             <property name="toolTip">
+              <string>Increases the length and height of the &quot;ramp&quot;. 1 is a bump, 4 starts breaking textures, 6 is huge vertical wall</string>
+             </property>
+             <property name="text">
+              <string>Scale Factor</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLineEdit" name="leStuntTimingGroup">
+             <property name="toolTip">
+              <string>With otherwise identical config, two bumps with same number move together, with 1 and 2 move oppositely</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLineEdit" name="leStuntScaleFact">
+             <property name="toolTip">
+              <string>Increases the length and height of the &quot;ramp&quot;. 1 is a bump, 4 starts breaking textures, 6 is huge vertical wall</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QLineEdit" name="leStuntHeight"/>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLineEdit" name="leStuntTimeBulging"/>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="lblStuntTimeFlat">
+             <property name="text">
+              <string>Time Flat</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLineEdit" name="leStuntTimeFlat"/>
+           </item>
+           <item row="4" column="1">
+            <widget class="QLabel" name="lblStuntExpandContract">
+             <property name="text">
+              <string>Smaller Expands Larger Contracts</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1">
+            <widget class="QLineEdit" name="leStuntExpandContract"/>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLabel" name="lblStuntTimeBulging">
+             <property name="text">
+              <string>Time Bulging</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLabel" name="lblStuntHeight">
+             <property name="text">
+              <string>Height</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="lblStuntTimingGroup">
+             <property name="toolTip">
+              <string>With otherwise identical config, two bumps with same number move together, with 1 and 2 move oppositely</string>
+             </property>
+             <property name="text">
+              <string>Timing Group</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="2">
+            <widget class="QLabel" name="lblStuntBulge">
+             <property name="text">
+              <string>Bulge</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="2">
+            <widget class="QLineEdit" name="leStuntBulge"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
            </property>
-          </widget>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>303</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </widget>
@@ -1145,8 +1426,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>120</width>
-              <height>51</height>
+              <width>582</width>
+              <height>513</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2">
